--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,14 @@
 			"type": "go",
 			"request": "launch",
 			"mode": "auto",
-			"program": "${fileDirname}",
+			"preLaunchTask": "Clean Dest",
+			"program": "${workspaceFolder}/main.go",
 			"env": {},
-			"args": []
+			"args": [
+				"-src=${workspaceFolder}/testdata/src",
+				"-dest=${workspaceFolder}/testdata/dest",
+				"-sort=artist:a,album:d,track",
+			],
 		}
 	]
 }
